updated UI with a new design and added a search function

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#031424] text-white tracking-wide !important;
+    @apply bg-[#a9c9e6] text-white tracking-wide !important;
   }
 
   h2,
